--- a/index.html
+++ b/index.html
@@ -42,14 +42,9 @@
         <img src="sim.jpeg" alt="">
     </div>
 
-    <div class="video">
-        <video width="720" height="440" controls>
-            <video loop src="oi.mp4" autoplay></video>
-            <source src="oi.mp4" type="video/mp4">
-            <source src="oi.ogg" type="video/ogg">
-            Your browser does not support the video tag.
-        </video>
-
+    <div class="ft">
+        <img src="pp.png" alt=""> 
+    </div>
 
     <div class="eu">
      <h5 id="seis">▶ Jogo educacional</h5>
